syntax = "proto3";

package services.currency.v1;

import "models/v1/money.proto";

message ConvertRequest {
  models.v1.Money from = 1;
  string to_currency_code = 2;
}

message ConvertResponse {
  models.v1.Money money = 1;
}
