syntax = "proto3";

package pb;

option go_package = "github.com/Arthur199212/microservices-demo/src/currencies/pb";

message Money {
  string currencyCode = 1;
  float amount = 2;
}
